fix layout bug

--- a/src/Carousel/main.less
+++ b/src/Carousel/main.less
@@ -4,6 +4,7 @@
 	height: calc(~'100vh - 54px');
 	box-sizing: border-box;
 	display: inline-block;
+	min-height: 800px;
 
 	.container {
 		position: relative;
