--- a/src/Slider/main.less
+++ b/src/Slider/main.less
@@ -4,9 +4,9 @@
 	position: relative;
 	width: 100%;
 	height: calc(~'100vh - 54px');
-	// todo => min-height calc
 	box-sizing: border-box;
 	display: inline-block;
+	min-height: 620px;
 
 	.container {
 		position: relative;
